# GHManage

./: .gitignore  COPILOT.md  LICENSE  README.md  build.bat  favorites.py  gh_data.py  ghviewer.py  pinned_repos.py  pyproject.toml  requirements.txt
.github/workflows/: ghmanage.yml
docs/: release-notes-v0.1.0.md  release-notes-v0.1.1.md  release-notes-v0.1.2.md  release-notes-v0.1.3.md  release-notes-v0.1.4.md  release-notes-v0.1.5.md  release-notes-v0.1.6.md  release-notes-v0.1.7.md  release-notes-v0.1.8.md  release-notes-v0.2.0.md
